Task5/non-admin-api-allow.yaml
#Создаем front-end-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front-end-app
      role: front-end
  template:
    metadata:
      labels:
        app: front-end-app
        role: front-end
    spec:
      containers:
        - name: nginx
          image: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
spec:
  selector:
    app: front-end-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
#Создаем back-end-api-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back-end-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: back-end-api-app
      role: back-end-api
  template:
    metadata:
      labels:
        app: back-end-api-app
        role: back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: back-end-api-app
spec:
  selector:
    app: back-end-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
#Создаем admin-front-end-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-front-end-app
      role: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end-app
        role: admin-front-end
    spec:
      containers:
        - name: nginx
          image: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: admin-front-end-app
spec:
  selector:
    app: admin-front-end-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
#Создаем admin-back-end-api-app
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-back-end-api-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin-back-end-api-app
      role: admin-back-end-api
  template:
    metadata:
      labels:
        app: admin-back-end-api-app
        role: admin-back-end-api
    spec:
      containers:
        - name: nginx
          image: nginx

---
apiVersion: v1
kind: Service
metadata:
  name: admin-back-end-api-app
spec:
  selector:
    app: admin-back-end-api-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80

---
# Сетевые политики
# back-end-api to front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend-to-backendapi
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: front-end

---
# admin-back-end-api to admin-front-end
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-admin-frontend-to-admin-backendapi
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: admin-front-end
